# spotify_tracker

./: .gitignore  Cargo.toml  README.md  tags
migrations/2019-07-31-044020_create_song_plays/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  server.rs  spotify.rs  worker.rs
