[package]
name = "spotify_tracker"
version = "0.1.0"
authors = ["Tanay Nathan <tanaynathan14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
dotenv = "0.14.1"
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.12.33"
mime = "0.3.13"
serde = "1.0.99"
serde_json = "1.0.40"
rspotify = "0.6.0"
