[package]
name = "spotify_tracker"
version = "0.1.0"
authors = ["Tanay Nathan <tanaynathan14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.14"
gotham = "0.4"
gotham_derive = "0.4"
hyper = "0.12"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rspotify = "0.8.0"
