[package]
name = "spotify_tracker"
version = "0.1.0"
authors = ["Tanay Nathan <tanaynathan14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14"
rspotify = "0.9.0"
sqlx = { version = "0.3", default-features = false, features = ["macros", "postgres", "time", "runtime-tokio"] }
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
